# CaveCrawler

./: .gitignore  navigation_stack_instructions
Arduino/RobotMove/: RobotMove.ino
Arduino/control_robot/: control_robot.ino
Arduino/odometry/: odometry.ino  readme.md
bags/: Initial_Odometry_01.bag  Initial_Odometry_02.bag
src/:  navigation_stack_instructions  Instructions.md  ompl install instructions
src/autonomy/: CMakeLists.txt  final_code.cpp  package.xml
src/autonomy/launch/: .robot_control.launch.swp  cam_lidar.launch  cam_lidar.launch~  point2laser.launch  robot_control.launch  winebot_sensors.launch
src/boost_nav_vision/src/: nav_3vistor_node.cpp
src/cavecrawler_2dnav/: ompl install instructions
src/cavecrawler_2dnav/cavecrawler_planning/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/cavecrawler_2dnav/cavecrawler_planning/include/: rrt_global_planner.h
src/cavecrawler_2dnav/cavecrawler_planning/launch/: complete_planning.launch  costmap_test.launch  teb_planning.launch
src/cavecrawler_2dnav/cavecrawler_planning/params/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/cavecrawler_2dnav/cavecrawler_planning/params/costmap_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/cavecrawler_2dnav/cavecrawler_planning/scripts/: cmd_vel_to_ackermann_drive.py
src/cavecrawler_2dnav/cavecrawler_planning/src/: rrt_global_planner.cpp  rrt_global_planner_backup.cpp
src/cavecrawler_2dnav/cavecrawler_setup_tf/: CMakeLists.txt  package.xml
src/cavecrawler_2dnav/cavecrawler_setup_tf/src/: tf_broadcaster.cpp
src/gps_goal/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/gps_goal/src/: gps_waypoint.cpp  gps_waypoint_backup.cpp
src/joy_arduino/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/localization/: CMakeLists.txt  package.xml  readme.md
src/localization/launch/: ekf_offline.launch  ekf_online.launch  gps_test.launch  localization_offline.launch  localization_online.launch  localization_winebot.launch  scorpion_offline.launch  winebot_offline.launch  winebot_online.launch
src/localization/launch/sub_launch/: ekf.launch  ekf_scorpion.launch  ekf_winebot.launch  gps.launch  hector_trajectory.launch  imu.launch  localization.rviz  localization_new.rviz  navsat_transform.launch  teensy3_2.launch  transforms.yaml
src/localization/src/: odom_cvt.py
src/localization/tests/test_bags/: 2018-02-26-00-12-55.bag  2018-02-26-00-13-47.bag  nrec_carpark.bag
src/localization/tests/test_imu_odom/: test_imu_odom.ino
src/localization/tests/test_odom/: test_odom.ino
src/nmea_gps_driver_mod/: CMakeLists.txt
src/perception/: package.xml
src/scorpion_localization/: CMakeLists.txt  package.xml
(+22 files in other folders)
